--- a/MortgageCalc/MortgageCalc/MainWindow.xaml
+++ b/MortgageCalc/MortgageCalc/MainWindow.xaml
@@ -6,9 +6,11 @@
         xmlns:local="clr-namespace:MortgageCalc"
         mc:Ignorable="d"
         Title="Mortage Calculator" Height="550" Width="750">
-    <Grid> 
-        <TextBox x:Name="mortgageAmount" Background="LightBlue"  HorizontalAlignment="Left" Height="27" Margin="32,50,0,444"  TextWrapping="Wrap" Text="Mortgage Amount" VerticalAlignment="Top" Width="222"/>
-        <TextBox x:Name="interestRate"   Background="LightPink"  HorizontalAlignment="Left" Height="27" Margin="254,50,0,444" TextWrapping="Wrap" Text="Interest Rate"   VerticalAlignment="Top" Width="222"/>
-        <TextBox x:Name="mortagePeriod"  Background="LightGreen" HorizontalAlignment="Left" Height="27" Margin="476,50,44,0"  TextWrapping="Wrap" Text="Mortgage Period" VerticalAlignment="Top" Width="222"/>
+    <Grid Name ="input">
+        <Button x:Name="Equals" Content="Enter" HorizontalAlignment="Left" Height="24" Margin="32,21,0,0" VerticalAlignment="Top" Width="42" Click="Button_Equals"/>
+        <TextBox x:Name="mortgageAmount" Background="LightBlue"  HorizontalAlignment="Left" Height="27" Margin="32,50,0,444"  TextWrapping="Wrap" VerticalAlignment="Top" Width="222" TextChanged="MortgageEnterInput"/>
+        <TextBox x:Name="interestRate"   Background="LightPink"  HorizontalAlignment="Left" Height="27" Margin="254,50,0,444" TextWrapping="Wrap" VerticalAlignment="Top" Width="222"/>
+        <TextBox x:Name="mortagePeriod"  Background="LightGreen" HorizontalAlignment="Left" Height="27" Margin="476,50,44,0"  TextWrapping="Wrap" VerticalAlignment="Top" Width="222"/>
+        <TextBox x:Name="outputMortgageAmount" Background="LightBlue" HorizontalAlignment="Left" Height="27" Margin="32,82,0,0"  TextWrapping="Wrap" VerticalAlignment="Top" Width="222"/>
     </Grid>
 </Window>
